tests/compile_fail/error_on_struct.rs
use acube::prelude::*;

#[derive(AcubeError, Debug)]
pub struct NotAnEnum {
    pub code: String,
}

fn main() {}
