tests/compile_fail/error_on_struct.stderr
error: AcubeError can only be derived on enums
 --> $WORKSPACE/tests/compile_fail/error_on_struct.rs
  |
  | pub struct NotAnEnum {
  |            ^^^^^^^^^
